attempting to fix spacing .. again

--- a/src/style/sass/_home.scss
+++ b/src/style/sass/_home.scss
@@ -50,7 +50,7 @@
 }
 
 .skills {
-    gap: 160px;
+    gap: 125px;
     display: flex;
     .skills-header {
         background: white;
@@ -103,7 +103,7 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, auto);
-        gap: 30px;
+        gap: 60px;
     }
     .greyscale  {
         filter: grayscale(100%);
